--- a/main.html
+++ b/main.html
@@ -7,56 +7,77 @@
 </head>
 
 <body>
-	<div>
-		<button data-ns-test="block-inline-button">Test1</button>
-		<button data-ns-test="block-inline-button">Test2</button>
-		Answer:Inline
-	</div>
-	<div>
-		<div data-ns-test="block-inline-div">Test1</div>
-		<div data-ns-test="block-inline-div">Test2</div>
-		Answer:Block
-	</div>
-	<div>
-		<span data-ns-test="block-inline-span">Test1</span>
-		<span data-ns-test="block-inline-span">Test2</span>
-		Answer:Inline
-	</div>
-	<div>
-		<p data-ns-test="block-inline-p">Test1</p>
-		<p data-ns-test="block-inline-p">Test2</p>
-		Answer:Block
-	</div>
-	<div>
-		<input data-ns-test="block-inline-input">
-		<input data-ns-test="block-inline-input">
-		Answer:Inline
-	</div>
-	<div>
-		<cite data-ns-test="block-inline-cite">Test1</cite>
-		<cite data-ns-test="block-inline-cite">Test2</cite>
-		Answer:Inline
-	</div>
-	<div>
-		<code data-ns-test="block-inline-code">Test1</code>
-		<code data-ns-test="block-inline-code">Test2</code>
-		Answer:Inline
-	</div>
-	<div>
-		<h1 data-ns-test="block-inline-h1">Test1</h1>
-		<h1 data-ns-test="block-inline-h1">Test2</h1>
-		Answer:Block
-	</div>
-	<div>
-		<sup data-ns-test="block-inline-sup">Test1</sup>
-		<sup data-ns-test="block-inline-sup">Test2</sup>
-		Answer:Inline
-	</div>
-	<div>
-		<sub data-ns-test="block-inline-sub">Test1</sub>
-		<sub data-ns-test="block-inline-sub">Test2</sub>
-		Answer:Inline
-	</div>
+	<!DOCTYPE html>
+<html>
+
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <div>
+        <!-- button should be inline -->
+        <button data-ns-test="block-inline-button">Test1</button>
+        <button data-ns-test="block-inline-button">Test2</button>
+        Answer: Inline
+    </div>
+    <div>
+        <!-- div should be block -->
+        <div data-ns-test="block-inline-div">Test1</div>
+        <div data-ns-test="block-inline-div">Test2</div>
+        Answer: Block
+    </div>
+    <div>
+        <!-- span should be inline -->
+        <span data-ns-test="block-inline-span">Test1</span>
+        <span data-ns-test="block-inline-span">Test2</span>
+        Answer: Inline
+    </div>
+    <div>
+        <!-- p should be block -->
+        <p data-ns-test="block-inline-p">Test1</p>
+        <p data-ns-test="block-inline-p">Test2</p>
+        Answer: Block
+    </div>
+    <div>
+        <!-- input should be inline -->
+        <input data-ns-test="block-inline-input">
+        <input data-ns-test="block-inline-input">
+        Answer: Inline
+    </div>
+    <div>
+        <!-- cite, code, sup, sub should be inline -->
+        <cite data-ns-test="block-inline-cite">Test1</cite>
+        <cite data-ns-test="block-inline-cite">Test2</cite>
+        Answer: Inline
+    </div>
+    <div>
+        <code data-ns-test="block-inline-code">Test1</code>
+        <code data-ns-test="block-inline-code">Test2</code>
+        Answer: Inline
+    </div>
+    <div>
+        <!-- h1 should be block -->
+        <h1 data-ns-test="block-inline-h1">Test1</h1>
+        <h1 data-ns-test="block-inline-h1">Test2</h1>
+        Answer: Block
+    </div>
+    <div>
+        <!-- sup should be inline -->
+        <sup data-ns-test="block-inline-sup">Test1</sup>
+        <sup data-ns-test="block-inline-sup">Test2</sup>
+        Answer: Inline
+    </div>
+    <div>
+        <!-- sub should be inline -->
+        <sub data-ns-test="block-inline-sub">Test1</sub>
+        <sub data-ns-test="block-inline-sub">Test2</sub>
+        Answer: Inline
+    </div>
+</body>
+
+</html>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
